# ms-thesis

./: .gitignore  CMakeLists.txt  INSTALL.sh  LICENSE.md  README.md
addmc/src/implementation/: addmc.cpp
addmc/src/interface/: main_addmc.hpp  util.hpp
eval/: README.md  SlurmArray.sbatch  benchmarks.py  data.csv  definitions.py  eval.py
eval/analysis/: README.md
eval/analysis/tables/: exp1b.txt  exp1lin0.txt  exp1lin1.txt  exp2.txt
eval/analysis/texts/: MAVCs.txt  dummies.txt  notes.txt
